Change package name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "SwipeEvent",
+  "name": "swipe-event",
   "version": "0.1.0",
   "authors": [
     "Yoshiya Hinosawa <stibium121@gmail.com>"
